--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid</title>
+    <title>Dashboard - The Odin Project</title>
     <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -14,14 +14,15 @@
     <nav>
         <div class="search-section">
             <div class="search-bar">
-                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                    <path fill="currentColor"
-                        d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-                </svg>
+                <img src="./assets/magnify.png" alt="">
                 <input type="text" placeholder="">
             </div>
         </div>
-        <div class="profile">Profile Info</div>
+        <div class="profile"> 
+            <div>
+                <img src="./assets/bell-ring-outline.png" alt="">
+                <p class="profile-name">Miguel Ramos</p></div>
+            </div>
     </nav>
     <aside>
 
@@ -30,50 +31,85 @@
         </div>
 
         <ul class="menu">
-            <li><svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                    <path fill="currentColor"
-                        d="M19.07,4.93C17.22,3 14.66,1.96 12,2C9.34,1.96 6.79,3 4.94,4.93C3,6.78 1.96,9.34 2,12C1.96,14.66 3,17.21 4.93,19.06C6.78,21 9.34,22.04 12,22C14.66,22.04 17.21,21 19.06,19.07C21,17.22 22.04,14.66 22,12C22.04,9.34 21,6.78 19.07,4.93M17,12V18H13.5V13H10.5V18H7V12H5L12,5L19.5,12H17Z" />
-                </svg><a href="#">Home </a></li>
-            <li> <a href="#">Profile</a></li>
-            <li><a href="#">Messages</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Tasks</a></li>
-            <li><a href="#">Communities</a></li>
+            <li><img src="./assets/home-circle-outline.png" alt=""><a href="#">Home </a></li>
+            <li> <img src="./assets/account-outline.png" alt=""><a href="#">Profile</a></li>
+            <li> <img src="./assets/message-processing-outline.png" alt=""><a href="#">Messages</a></li>
+            <li><img src="./assets/clock-outline.png" alt=""><a href="#">History</a></li>
+            <li> <img src="./assets/format-list-checks.png" alt=""><a href="#">Tasks</a></li>
+            <li> <img src="./assets/account-group-outline.png" alt=""><a href="#">Communities</a></li>
         </ul>
 
         <ul class="settings">
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Privacy</a></li>
+            <li> <img src="./assets/cog-outline.png" alt=""><a href="#">Settings</a></li>
+            <li> <img src="./assets/account-question-outline.png" alt=""><a href="#">Support</a></li>
+            <li><img src="./assets/shield-lock-outline.png" alt=""><a href="#">Privacy</a></li>
         </ul>
     </aside>
     <main>
         <div class="myprojects-header">Your Projects</div>
         <div class="projects">
-            <div class="item">Item 1</div>
-            <div class="item">Item 2</div>
-            <div class="item">Item 3</div>
-            <div class="item">Item 4</div>
-            <div class="item">Item 5</div>
-            <div class="item">Item 6</div>
-            <div class="item">Item 7</div>
-            <div class="item">Item 8</div>
-            <div class="item">Item 9</div>
-            <div class="item">Item 10</div>
-            <div class="item">Item 11</div>
-            <div class="item">Item 12</div>
-            <div class="item">Item 13</div>
-            <div class="item">Item 14</div>
-            <div class="item">Item 15</div>
-            <div class="item">Item 16</div>
-            <div class="item">Item 17</div>
-            <div class="item">Item 18</div>
-            <div class="item">Item 19</div>
-            <div class="item">Item 20</div>
-            <div class="item">Item 21</div>
+            <div class="item">
+                <div class="item-content">
+                    <p>Item 1</p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa ipsum sunt a, voluptatibus recusandae quaerat quas possimus vitae. Porro, quibusdam adipisci? Commodi provident nemo earum placeat explicabo soluta doloribus illum mollitia laborum inventore dolore ipsum consequatur accusamus dolores quaerat sit, debitis eum odit veritatis! Laborum quos aspernatur cumque quidem vel, amet omnis dolores error aliquid quae odit hic voluptates facilis.
+                </div>
+                <div class="item-icons">
+                    <div>
+                        <img src="./assets/star-plus-outline.png" alt="">
+                        <img src="./assets/eye-plus-outline.png" alt="">
+                        <img src="./assets/share-variant-outline.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-content">
+                    <p>Item 2</p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias, molestiae est voluptatum sint eos quam veritatis accusantium ducimus tenetur animi culpa earum esse distinctio architecto recusandae officia voluptatem quidem quo necessitatibus. Facilis totam aut vel quidem velit mollitia repellat inventore?
+                </div>
+                <div class="item-icons">
+                    <div>
+                        <img src="./assets/star-plus-outline.png" alt="">
+                        <img src="./assets/eye-plus-outline.png" alt="">
+                        <img src="./assets/share-variant-outline.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="item"> <div class="item-content">
+                <p>Item 3</p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, beatae similique, odit assumenda earum doloremque facilis quibusdam exercitationem expedita minus eligendi, quidem consequuntur nam. Voluptas officiis tempora, provident iusto veritatis ea repellat aspernatur necessitatibus dignissimos ex doloremque voluptates quo odit dicta, nam impedit sint veniam, ipsum eum atque ullam dolores.
+            </div>
+            <div class="item-icons">
+                <div>
+                    <img src="./assets/star-plus-outline.png" alt="">
+                    <img src="./assets/eye-plus-outline.png" alt="">
+                    <img src="./assets/share-variant-outline.png" alt="">
+                </div>
+            </div></div>
+            <div class="item"> <div class="item-content">
+                <p>Item 4</p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum maxime dicta temporibus, odio unde voluptas quam quia, nisi rerum expedita deleniti facilis maiores eos perferendis corrupti quas non? Aliquid, non.
+            </div>
+            <div class="item-icons">
+                <div>
+                    <img src="./assets/star-plus-outline.png" alt="">
+                    <img src="./assets/eye-plus-outline.png" alt="">
+                    <img src="./assets/share-variant-outline.png" alt="">
+                </div>
+            </div></div>
+            <div class="item"> <div class="item-content">
+                <p>Item 5</p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, repellat modi provident cumque voluptatem accusamus ex quos excepturi nisi ad!
+            </div>
+            <div class="item-icons">
+                <div>
+                    <img src="./assets/star-plus-outline.png" alt="">
+                    <img src="./assets/eye-plus-outline.png" alt="">
+                    <img src="./assets/share-variant-outline.png" alt="">
+                </div>
+            </div></div>
         </div>
         <div class="announce-header">Announcements</div>
-        <div class="announcements"> Announcements Box</div>
+        <div class="announcements"></div>
         <div class="trending-header">Trending</div>
         <div class="trending">
 
