--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
     </nav>
     <aside>
-
+        <div class="top-div">
         <div class="side-title">
             <p id="title">Dashboard</p>
         </div>
@@ -38,12 +38,14 @@
             <li> <img src="./assets/format-list-checks.png" alt=""><a href="#">Tasks</a></li>
             <li> <img src="./assets/account-group-outline.png" alt=""><a href="#">Communities</a></li>
         </ul>
-
+        </div>
+        <div>
         <ul class="settings">
             <li> <img src="./assets/cog-outline.png" alt=""><a href="#">Settings</a></li>
             <li> <img src="./assets/account-question-outline.png" alt=""><a href="#">Support</a></li>
             <li><img src="./assets/shield-lock-outline.png" alt=""><a href="#">Privacy</a></li>
         </ul>
+        </div>
     </aside>
     <main>
         <div class="myprojects-header">Your Projects</div>
